<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- The name of the application. -->
    <string name="app_name">Reservations</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">Reservations</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Venue name, Address...</string>
    <string name="action_search">Venue name, address...</string>
    <string name="action_clear">Clear Search History</string>
    <string name="search_description">Search for venues</string>
    <string name="title_activity_venue_detail">VenueDetailActivity</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Dictionary</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source. -->
    <string name="settings_description">Venues Information</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Use the search box in the Action Bar to look up a venue</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\" </item>
        <item quantity="other">%1$d results for \"%2$s\" </item>
    </plurals>
    <plurals name="venues_list">
        <item quantity="one">%1$d result</item>
        <item quantity="other">%1$d results</item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="action_filter">Filter Results</string>

    <string-array name="cities_array">
        <item>Plovdiv</item>
        <item>Varna</item>
        <item>Burgas</item>
        <item>Rousse</item>
        <item>Stara Zagora</item>
        <item>Pleven</item>
        <item>Sliven</item>
        <item>Dobrich</item>
        <item>Kardzhali</item>
        <item>Pernik</item>
        <item>Shumen</item>
        <item>Haskovo</item>
        <item>Yambol</item>
        <item>Pazardzhik</item>
        <item>Blagoevgrad</item>
        <item>Veliko Tarnovo</item>
        <item>Vratsa</item>
        <item>Gabrovo</item>
        <item>Asenovgrad</item>
        <item>Vidin</item>
        <item>Kazanlak</item>
        <item>Sofia</item>
    </string-array>
    <string-array name="venue_types_array">
        <item>All</item>
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Bar</item>
        <item>Club</item>
    </string-array>
    <string-array name="venues_type_array">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Bar</item>
        <item>Club</item>
    </string-array>

    <string name="title_activity_login">Sign In</string>
    <string name="userLoginBtn">Sign In</string>
    <string name="userPass">Password</string>
    <string name="userEmail">Email</string>
    <string name="title_activity_authorised_base">AuthorisedBaseActivity</string>
    <string name="no_network">No network connection available.</string>
    <string name="empty_email_error">Email is empty</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="empty_pass_error">Empty Pass</string>
    <string name="different_pass_error">Passwords do not match</string>
    <string name="empty_fname_error">Empty First Name</string>
    <string name="empty_lname_error">Empty Last Name</string>
    <string name="empty_phone_error">Empty Phone Number</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="loging">Logging In</string>
    <string name="loading">Loading Data</string>
    <string name="address_label">Address:</string>
    <string name="phone_label">Phone:</string>
    <string name="worktime_label">Working Hours:</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="privacy_policy_last_update">16.02.2015</string>
    <string name="privacy_policy_service">Reservations App</string>
    <string name="privacy_policy_company">MentorMate Academy Project</string>
    <string name="privacy_policy_country">Bulgaria</string>
    <string name="privacy_policy_period">30</string>
    <string name="privacy_policy">Terms and Conditions ("Terms")\n
Last updated: (%1$s).\n
Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using
the %2$s (the "Service") operated by %3$s ("us", "we", or "our").\n
Your access to and use of the Service is conditioned on your acceptance of and compliance with
these Terms. These Terms apply to all visitors, users and others who access or use the Service.
By accessing or using the Service you agree to be bound by these Terms. If you disagree with any
part of the terms then you may not access the Service.\n
Termination clause for websites that do not have accounts. If your website or mobile app allows
users to register and have an account, create your own Terms and Conditions.\n
Termination\n
We may terminate or suspend access to our Service immediately, without prior notice or liability, for
any reason whatsoever, including without limitation if you breach the Terms.\mn
All provisions of the Terms which by their nature should survive termination shall survive
termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and
limitations of liability.\n
Links To Other Web Sites\n
Our Service may contain links to third­party web sites or services that are not owned or controlled
by %4$s.\n
%5$s has no control over, and assumes no responsibility for, the content,
privacy policies, or practices of any third party web sites or services. You further acknowledge and
agree that %6$s shall not be responsible or liable, directly or indirectly, for
any damage or loss caused or alleged to be caused by or in connection with use of or reliance on
any such content, goods or services available on or through any such web sites or services.
We strongly advise you to read the terms and conditions and privacy policies of any third­party web
sites or services that you visit.\n
Governing Law\n
These Terms shall be governed and construed in accordance with the laws of %7$s, without regard to its conflict of law provisions.\n
Our failure to enforce any right or provision of these Terms will not be considered a waiver of those
rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the
remaining provisions of these Terms will remain in effect. These Terms constitute the entire
agreement between us regarding our Service, and supersede and replace any prior agreements we
might have between us regarding the Service.\n
Changes\n
We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a
revision is material we will try to provide at least %8$s days notice prior to any new terms
taking effect. What constitutes a material change will be determined at our sole discretion.\n
By continuing to access or use our Service after those revisions become effective, you agree to be
bound by the revised terms. If you do not agree to the new terms, please stop using the Service.
Contact Us\n
If you have any questions about these Terms, please contact us</string>
    <string name="google_maps_key_instructions" templateMergeStrategy="replace">
        <!--
    TODO: Before you run your application, you need a Google Maps API key.

    To get one, follow this link, follow the directions and press "Create" at the end:

https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=2D:3B:09:17:40:95:03:43:1C:11:7E:9A:41:65:0F:4D:94:9E:24:CB%3Bbg.mentormate.academy.reservations

    You can also add your credentials to an existing key, using this line:
    2D:3B:09:17:40:95:03:43:1C:11:7E:9A:41:65:0F:4D:94:9E:24:CB;bg.mentormate.academy.reservations

    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
        -->
    </string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyAthpOoxah7GXTGW8eq7oSnNY86D1Q4RyU</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_privacy">Terms and Conditions</string>
    <string name="title_activity_about">About Us</string>
    <string name="about">MentorMate Academy\n\nAndroid App\n\nDevelopers: Maria Velkova and Emil Kolev\n\nCredits:\n<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div><div>Icons made by <a href="http://www.sm-artists.com" title="spovv">spovv</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div></string>
    <string name="title_activity_user_account">My Account</string>
    <string name="title_activity_registration">Sign Up</string>
    <string name="contact_avatar_upload">Add Avatar</string>
    <string name="avatar_upload">Add avatar</string>
    <string name="pick_action">Select Image</string>
    <string name="title_activity_admin">New Reservations</string>
    <string name="title_activity_reservations">My Reservations</string>
    <string name="title_activity_admin_main">Home</string>
    <string name="title_activity_admin_reservations">AdminReservationsActivity</string>
    <string name="title_activity_admin_venues_list">My Venues</string>
    <string name="title_activity_rejected_reservations">Rejected Reservations</string>
    <string name="title_activity_accepted_reservations">Accepted Reservations</string>
    <string name="type_label">Type</string>
    <string name="capacity_label">Capacity</string>
    <string name="venue_capacity">%1$d people</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_admin_about">About Us</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_admin_terms">Terms and Conditions</string>

</resources>
