<?xml version="1.0" encoding="utf-8"?>
<!--
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="@string/search_hint"
    android:searchMode="queryRewriteFromData"
    android:searchSuggestAuthority="bg.mentormate.academy.reservations.providers.CustomSearchRecentSuggestionsProvider"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:includeInGlobalSearch="true"
    android:queryAfterZeroResults="true"
    android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
    android:voiceLanguageModel="free_form"
    android:searchSettingsDescription="@string/search_description"
    android:searchSuggestSelection="word MATCH ?">
</searchable>
    -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/search_label"
    android:hint="@string/search_hint"
    android:searchSettingsDescription="@string/settings_description"
    android:searchSuggestAuthority="bg.mentormate.academy.reservations.providers.CustomContentProvider"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://bg.mentormate.academy.reservations.providers.CustomContentProvider/venues"
    android:searchSuggestSelection="name like ?"
    android:searchSuggestThreshold="1"
    android:includeInGlobalSearch="true"
    >
</searchable>