<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bg.mentormate.academy.reservations.activities.LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/userEmail"
        android:hint="@string/userEmail"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/userPass"
        android:hint="@string/userPass"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userLoginBtn"
        android:id="@+id/userLoginBtn"
        android:layout_gravity="center_horizontal"
        android:onClick="userLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:onClick="userRegistration"
        android:layout_gravity="center"
        android:id="@+id/register"
        android:clickable="true"
        android:elegantTextHeight="false" />
</LinearLayout>
